google custom search

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,4 +2,6 @@
 {{- define "main" -}}
 <div id="root"></div>
 <div id="modal-root"></div>
+{{- partial "components/announcement" . -}}
+{{- partial "components/search-results" . -}}
 {{- end -}}
