--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,16 +23,8 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  {{ $scssMain := "scss/main.scss"}}
-  {{ if .Site.IsServer }}
-  {{/* Note the missing postCSS. This makes it snappier to develop in Chrome, but makes it look sub-optimal in other browsers. */}}
-  {{ $css := resources.Get $scssMain | toCSS (dict "enableSourceMap" true) }}
-  <link href="{{ $css.RelPermalink }}" rel="stylesheet">
-  {{ else }}
-  {{ $css := resources.Get $scssMain | toCSS (dict "enableSourceMap" false) | postCSS | minify | fingerprint }}
-  <link rel="preload" href="{{ $css.RelPermalink }}" as="style">
-  <link href="{{ $css.RelPermalink }}" rel="stylesheet" integrity="{{ $css.Data.integrity }}">
-  {{ end }}
+{{ $style := resources.Get "styles.scss" | toCSS | minify | fingerprint }}
+<link rel="stylesheet" href="{{ $style.Permalink }}" emotion="🤩">
 {{- if .IsHome -}}
 {{- range .Site.AllPages -}}
 {{- $section := .Section -}}
@@ -59,8 +51,6 @@
     opacity: 0 !important
   }
 </style>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 {{ if .Site.Params.offlineSearch }}
 <script src="https://unpkg.com/lunr@2.3.8/lunr.min.js"
   integrity="sha384-vRQ9bDyE0Wnu+lMfm57BlYLO0/XauFuKpVsZPs7KEDwYKktWi5+Kz3MP8++DFlRY" crossorigin="anonymous"></script>
@@ -127,4 +117,3 @@
 <script>
   var featureFlagContent = {};
 </script>
-<script async src="https://cse.google.com/cse?cx=006650721361932583448:0tpp1tnttba"></script>
