--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,4 +4,5 @@
 <div id="modal-root"></div>
 {{- partial "components/announcement" . -}}
 {{- partial "components/search-results" . -}}
+{{- partial "components/support-docs" . -}}
 {{- end -}}
