--- a/themes/support-developer-hugo-theme/assets/styles.scss
+++ b/themes/support-developer-hugo-theme/assets/styles.scss
@@ -27,6 +27,7 @@
 @import "components/docs.scss";
 @import "components/blog.scss";
 @import "components/support-docs.scss";
+@import "components/how-to.scss";
 
 /* Pages */
 @import "pages/page-about.scss";
