--- a/themes/support-developer-hugo-theme/assets/components/footer.scss
+++ b/themes/support-developer-hugo-theme/assets/components/footer.scss
@@ -7,6 +7,7 @@
   position: relative;
   z-index: 1;
   text-align: left;
+  border-top: 10px solid #EB0000;
 
   /* Ensure intercom doesn't cover anything... */
   @media screen and (max-width: 48em) {
