--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,258 +1,31 @@
 {{- define "main" -}}
-<main id="post-container" class="how-to-wrapper">
-  {{- partial "components/announcement" . -}}
-  <div class="container">
-    <div class="content home">
-      <div class="row">
-        <div class="col-sm-12">
-          <h2>How&#8211;To Articles</h2>
-          <p class="lead">Quickly find answers and troubleshooting resources.</p>
-        </div>
-      </div>
-      <div class="filter-product-type row">
-        <div class="col tablink" id="gs-ctrl" ><a href="#getting-started" onclick="openTab(event, 'gs-display');">Getting Started</a></div>
-        <div class="col tablink" id="cloud-ctrl"><a href="#cloud-hosting" onclick="openTab(event, 'cloud-display');">Cloud Services</a></div>
-        <div class="col tablink" id="office-ctrl"><a href="#cloud-office"  onclick="openTab(event, 'office-display');">Cloud Office</a></div>
-        <div class="col tablink" id="rpc-ctrl"><a href="#private-cloud"  onclick="openTab(event, 'rpc-display');">Private Cloud</a></div>
-        <div class="col tablink"><a href="/how-to/account-management">Account Management</a></div>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="content home product-type product-type-gs" id="gs-display">
-      <div class="row">
-        <div class="col-sm-12">
-          <p>With all the services that the cloud offers, it can be difficult to figure out where to start. Whether you
-            want to build a web server for a content management system, host an email server, or create a system backup,
-            there are a few services that are essential to building an effective cloud.<br><br>The getting started
-            guides help you figure out which services you need to create, in the most effective order, to get your cloud
-            up and running.</p>
-        </div>
-      </div>
-      <br>
-      <div class="cta row">
-        <div class="col-sm-12 col-md-6">
-          <p>
-            <a href="/how-to/getting-started-with-public-cloud/" id="cloud-button" class="banner-button">Get Started
-              with Rackspace Public Cloud</a>
-          </p>
-        </div>
-        <div class="col-sm-12 col-md-6">
-          <p>
-            <a href="/how-to/getting-started-with-hosted-email/" id="hosted-button" class="banner-button">Get Started
-              with Rackspace Hosted Email</a>
-          </p>
-        </div>
-        <div class="col-sm-12 col-md-6">
-          <p></p>
-        </div>
-        <div class="col-sm-12 col-md-6">
-          <p>
-            <a href="/how-to/getting-started-with-office-365/" id="office-button" class="banner-button">Get Started with
-              Office 365</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="content home product-type product-type-cloud inactive" id="cloud-display">
-      <div class="row">
-        <div class="col-sm-12">
-          <h3>Rackspace Managed Security</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-4 icon pdr">
-          <h4><a href="/how-to/rackspace-pdr/"><span>Rackspace</span> Proactive Detection & Response</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon alert-logic">
-          <h4><a href="/how-to/rms-alert-logic/"><span>Alert Logic</span> Security Solutions</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon cloudflare">
-          <h4><a href="/how-to/rms-cloudflare/"><span>Cloudflare</span> Edge Security</a></h4>
-        </div>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col-sm-12">
-          <h3>Managed Operations</h3>
-          <div class="icon managed-operations">
-            <h4><a href="/how-to/managed-operations"><span>Managed</span> Operations</a></h4>
-          </div>
-        </div>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col-sm-12">
-          <h3>Compute</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-4 icon servers primary">
-          <h4><a href="/how-to/cloud-servers/"><span>Cloud</span> Servers</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon images">
-          <h4><a href="/how-to/cloud-images/"><span>Cloud</span> Images</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon vmware">
-          <h4><a href="/how-to/managed-vmware-services/"><span>VMware</span> Server Virtualization</a>
-          </h4>
-        </div>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col-sm-12">
-        <h3>Network</h3>
-        </div>
-      </div>
-        <div class="row">
-          <div class="col-sm-12 col-md-3 icon networks primary">
-            <h4><a href="/how-to/cloud-networks/"><span>Cloud</span> Networks</a></h4>
-          </div>
-          <div class="col-sm-12 col-md-3 icon dns">
-            <h4><a href="/how-to/cloud-dns/"><span>Cloud</span> DNS</a></h4>
-          </div>
-          <div class="col-sm-12 col-md-3 icon load-balancers">
-            <h4><a href="/how-to/cloud-load-balancers/"><span>Cloud</span> Load Balancers</a></h4>
-          </div>
-          <div class="col-sm-12 col-md-3 icon rackconnect">
-            <h4><a href="/how-to/rackconnect/"><span>Rackspace</span> RackConnect</a></h4>
-          </div>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col-sm-12">
-        <h3>Storage</h3>
-        </div>
-      </div>
-      <div class="row">
-          <div class="primary col-sm-12 col-md-4 icon files">
-            <h4><a href="/how-to/cloud-files"><span>Cloud</span> Files</a></h4>
-          </div>
-          <div class="col-sm-12 col-md-4 icon block-storage">
-            <h4><a href="/how-to/cloud-block-storage"><span>Cloud</span> Block Storage</a></h4>
-          </div>
-          <div class="col-sm-12 col-md-4 icon cdn">
-            <h4><a href="/how-to/rackspace-cdn"><span>Rackspace</span> CDN</a></h4>
-          </div>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col-sm-12">
-        <h3>Data</h3>
-        </div>
-      </div>
-      <div class="row">
-          <div class="primary col-sm-12 col-md-4 icon databases">
-            <h4><a href="/how-to/cloud-databases/"><span>Cloud</span> Databases</a></h4>
-          </div>
-          <div class="col-sm-12 col-md-4 icon queues">
-            <h4><a href="/how-to/cloud-queues/"><span>Cloud</span> Queues</a></h4>
-          </div>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col-sm-12">
-        <h3>Infrastructure &amp; Developer Tools</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-4 icon primary backup">
-          <h4><a href="/how-to/cloud-backup/"><span>Cloud</span> Backup</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon monitoring">
-          <h4><a href="/how-to/rackspace-monitoring/"><span>Rackspace</span> Monitoring</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon orchestration">
-          <h4><a href="/how-to/cloud-orchestration/"><span>Cloud</span> Orchestration</a></h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-4 icon auto-scale">
-          <h4><a href="/how-to/rackspace-auto-scale/"><span>Rackspace</span> Auto Scale</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 primary icon intelligence">
-          <h4><a href="/how-to/rackspace-intelligence/"><span>Rackspace</span> Intelligence</a>
-          </h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon metrics">
-          <h4><a href="/how-to/rackspace-metrics"><span>Rackspace</span> Metrics</a></h4>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="content home product-type product-type-email inactive" id="office-display">
-      <div class="row">
-        <div class="primary col-sm-12 col-md-4 icon email">
-          <h4><a href="/how-to/rackspace-email/"><span>Rackspace</span> Email</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon exchange">
-          <h4><a href="/how-to/exchange/"><span>Microsoft</span> Exchange</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon email-archiving">
-          <h4><a href="/how-to/rackspace-email-archiving/"><span>Rackspace</span> Email Archiving</a>
-          </h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-4 primary icon office-365">
-          <h4><a href="/how-to/office-365/"><span>Microsoft</span> Office 365</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon skype">
-          <h4><a href="/how-to/skype-for-business/"><span>Microsoft</span> Skype for Business</a>
-          </h4>
-        </div>
-      </div>
-      <hr />
-      <div class="row email-wizard">
-        <div class="col-sm-12 col-md-8">
-          <h4>Email Setup Wizard</h4>
-          <p>Set up your email client with just a few easy steps using our Email Setup Wizard!</p>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <aside class="cta">
-            <p>
-              <a href="https://emailhelp.rackspace.com/" id="email-button" class="banner-button">Get Started</a>
-            </p>
-          </aside>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="content home product-type product-type-cloud inactive" id="rpc-display">
-      <div class="row">
-        <div class="primary col-sm-12 col-md-4 icon private">
-          <h4><a href="/how-to/dedicated-hosting/"><span>Rackspace</span> Dedicated Hosting</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon private">
-          <h4><a href="/how-to/rpc-openstack/"><span>Rackspace Private Cloud</span> Powered by OpenStack</a></h4>
-        </div>
-        <div class="col-sm-12 col-md-4 icon private">
-          <h4><a href="/how-to/rpc-vmware/"><span>Rackspace Private Cloud</span> Powered by VMware</a></h4>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="river">
+<article class="how-to">
     <div class="container">
-      <div class="row content home contact">
-        <div class="col-sm-12">
-        <h2>Contact Support</h2>
-        <p class="lead">We've got your back 24x7x365.</p>
+        <div class="row">
+            <div class="col-sm-12 col-md-3 col-lg-3">
+                {{- if or (eq .Params.Product_url "account-management") (eq .Params.Product_url "rackspace-pdr") -}}
+                    {{- partial "components/sidebar-account" . -}}
+                {{- else -}}
+                    {{- partial "components/sidebar" . -}}
+                {{- end -}}
+            </div>
+            <div class="col-sm-12 col-md-9 col-lg-9">
+                <h2>{{- .Params.Title -}}</h2>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                        <p>Last updated on: {{- .Params.Last_modified_date -}}</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                        <p>Authored by: {{- .Params.Last_modified_by -}}</p>
+                    </div>
+                </div>
+                {{- .Content -}}
+                {{- partial "components/share-bar" . -}}
+                {{- partial "components/cta/basic" . -}}
+                {{- partial "components/legal-footer" . -}}
+            </div>
         </div>
-      </div>
-      <div class="row content home contact">
-        <div class="col-sm-12 col-md-6">
-          <h3><span>Cloud Hosting and Managed Support</span>1-800-961-4454</h3>
-        </div>
-        <div class="col-sm-12 col-md-6">
-          <h3><span>Cloud Office Support</span>1-855-348-9067</h3>
-        </div>
-      </div>
     </div>
-  </div>
-</main>
-{{- end -}} 
+    </div>
+</article>
+{{- end -}}
