--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -15,7 +15,7 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 </script>
 
-<script async src="https://cse.google.com/cse.js?cx=006650721361932583448:0tpp1tnttba"></script>
+<!-- <script async src="https://cse.google.com/cse.js?cx=006650721361932583448:0tpp1tnttba"></script> -->
 
 <script>
     function openTab(evt, tabName) {
@@ -32,17 +32,25 @@
         evt.currentTarget.parentElement.className += " active";
     }
     window.onload = function () {
-        if(document.getElementById("gs-ctrl") != undefined) {
+        if (document.getElementById("gs-ctrl") != undefined) {
             document.getElementById("gs-ctrl").className += " active"
         }
-        if(!window.location.href.includes("faq") && !window.location.href.includes("all-articles") && (document.getElementById("acc-man") != undefined)) {
+        if (!window.location.href.includes("faq") && !window.location.href.includes("all-articles") && (document
+                .getElementById("acc-man") != undefined)) {
             document.getElementById("acc-man").className += " active";
         }
-        if(window.location.href.includes("faq") && (document.getElementById("acc-faq") != undefined)) {
+        if (window.location.href.includes("faq") && (document.getElementById("acc-faq") != undefined)) {
             document.getElementById("acc-faq").className += " active";
         }
-        if(window.location.href.includes("all-articles") && (document.getElementById("acc-all") != undefined)) {
+        if (window.location.href.includes("all-articles") && (document.getElementById("acc-all") != undefined)) {
             document.getElementById("acc-all").className += " active";
         }
     }
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.0.0/dist/algoliasearch-lite.umd.js" integrity="sha256-MfeKq2Aw9VAkaE9Caes2NOxQf6vUa8Av0JqcUXUGkd0=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.0.0/dist/instantsearch.production.min.js" integrity="sha256-6S7q0JJs/Kx4kb/fv0oMjS855QTz5Rc2hh9AkIUjUsk=" crossorigin="anonymous"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CObject.assign%2CObject.entries"></script>
+
+{{ $built := resources.Get "js/scripts.js" | js.Build "scripts.js" }}
+<script type="text/javascript" src="{{ $built.RelPermalink }}" defer></script>
