--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -52,5 +52,5 @@
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.0.0/dist/instantsearch.production.min.js" integrity="sha256-6S7q0JJs/Kx4kb/fv0oMjS855QTz5Rc2hh9AkIUjUsk=" crossorigin="anonymous"></script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CObject.assign%2CObject.entries"></script>
 
-{{ $built := resources.Get "js/scripts.js" | js.Build "scripts.js" }}
+{{ $built := resources.Get "js/app.js" | js.Build "scripts.js" }}
 <script type="text/javascript" src="{{ $built.RelPermalink }}" defer></script>
