--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
             <div class="col-sm-12 col-md-3 col-lg-3">
                 {{- partial "components/sidebar-account" . -}}
             </div>
-            <div class="col-sm-12 col-md-9 col-lg-9 account-content">
+            <div class="col-sm-12 col-md-9 col-lg-9 account-content" id="account-content">
                 <h2 class="less-margin">{{ .Params.Title }}</h2>
                 <div class="row account-meta">
                     <div class="col-sm-12 col-md-6 col-lg-6">
