--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,7 +6,7 @@
             <div class="col-sm-12 col-md-3 col-lg-3">
                     {{- partial "components/sidebar-account" . -}}
             </div>
-            <div class="col-sm-12 col-md-9 col-lg-9 account-content">
+            <div class="col-sm-12 col-md-9 col-lg-9 account-content" id="account-content">
                 <h2>{{- .Params.Title -}}</h2>
                 {{- if not (in .Params.Permalink "all-articles") -}}
                 <div class="row">
