--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -35,8 +35,7 @@
         if (document.getElementById("gs-ctrl") != undefined) {
             document.getElementById("gs-ctrl").className += " active"
         }
-        if (!window.location.href.includes("faq") && !window.location.href.includes("all-articles") && (document
-                .getElementById("acc-man") != undefined)) {
+        if (!window.location.href.includes("faq") && !window.location.href.includes("all-articles") && (document.getElementById("acc-man") != undefined)) {
             document.getElementById("acc-man").className += " active";
         }
         if (window.location.href.includes("faq") && (document.getElementById("acc-faq") != undefined)) {
@@ -45,7 +44,23 @@
         if (window.location.href.includes("all-articles") && (document.getElementById("acc-all") != undefined)) {
             document.getElementById("acc-all").className += " active";
         }
+        if(window.location.href.includes("faq")) {
+            document.getElementById("account-content").className += " faq-list";
+            $('h4').addClass('inactive');
+        }
     }
+    $('h4').click(function() {
+        if($(this).hasClass('active')){
+            $(this).removeClass('active');
+        } 
+        if(!$(this).hasClass('active') && $(this).hasClass('inactive')) {
+            $(this).addClass('active');
+            $(this).removeClass('inactive');
+        }
+        if(!$(this).hasClass('active') && !$(this).hasClass('inactive')) {
+            $(this).addClass('inactive');
+        }
+    })
 </script>
 
 
