--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,10 +35,10 @@
 {{- end -}}
 {{- end -}}
 
-<link rel="apple-touch-icon" sizes="180x180" href="{{ "favicons/favicon.ico" | absURL }}" />
-<link rel="icon" type="image/png" href="{{ "favicons/favicon.ico" | absURL }}" sizes="32x32" />
-<link rel="icon" type="image/png" href="{{ "favicons/favicon.ico" | absURL }}" sizes="16x16" />
-<link rel="mask-icon" href="{{ "favicons/favicon.ico" | absURL }}" color="#00c7b7" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" />
+<link rel="icon" type="image/png" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" sizes="32x32" />
+<link rel="icon" type="image/png" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" sizes="16x16" />
+<link rel="mask-icon" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" color="#00c7b7" />
 {{- with .OutputFormats.Get "RSS" -}}
 <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $title }}" />
 <link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ $title }}" />
