--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,10 +11,10 @@
                 <h2 class="less-margin">{{ .Params.Title }}</h2>
                 <div class="row account-meta">
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <p>Last updated on: {{ .Params.Last_modified_date }}</p>
+                        <p>Last updated on: &nbsp; {{ .Params.Last_modified_date }}</p>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <p>Authored by: {{ .Params.Last_modified_by }}</p>
+                        <p>Authored by: &nbsp;  {{ .Params.Last_modified_by }}</p>
                     </div>
                 </div>
                 {{ .Content }}
