--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -45,22 +45,25 @@
             document.getElementById("acc-all").className += " active";
         }
         if(window.location.href.includes("faq")) {
-            document.getElementById("account-content").className += " faq-list";
-            $('h4').addClass('inactive');
+            var elements = document.getElementsByClassName("panel-group");
+            for(var i = 0; i < elements.length; i++ ) {
+                elements[i].className += " faq-list"
+            }
+            $('a[data-toggle="collapse"]').addClass('inactive');
         }
     }
-    $('h4').click(function() {
-        if($(this).hasClass('active')){
-            $(this).removeClass('active');
-        } 
-        if(!$(this).hasClass('active') && $(this).hasClass('inactive')) {
-            $(this).addClass('active');
-            $(this).removeClass('inactive');
-        }
-        if(!$(this).hasClass('active') && !$(this).hasClass('inactive')) {
-            $(this).addClass('inactive');
-        }
-    })
+    // $('h4').click(function() {
+    //     if($(this).hasClass('active')){
+    //         $(this).removeClass('active');
+    //     } 
+    //     if(!$(this).hasClass('active') && $(this).hasClass('inactive')) {
+    //         $(this).addClass('active');
+    //         $(this).removeClass('inactive');
+    //     }
+    //     if(!$(this).hasClass('active') && !$(this).hasClass('inactive')) {
+    //         $(this).addClass('inactive');
+    //     }
+    // })
 </script>
 
 
