--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -51,6 +51,8 @@
             }
             $('a[data-toggle="collapse"]').addClass('inactive');
         }
+        $("table").addClass(["table", "table-dark", "table-striped", "table-bordered"]);
+        
     }
 </script>
 
