--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,7 +14,7 @@
                         <p>Last updated on: &nbsp; {{ .Params.Last_modified_date }}</p>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <p>Authored by: &nbsp;  {{ .Params.Last_modified_by }}</p>
+                        <p>Authored by: &nbsp;  {{ .Params.Created_by }}</p>
                     </div>
                 </div>
                 {{ .Content }}
