Table Styling Fix

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -51,7 +51,7 @@
             }
             $('a[data-toggle="collapse"]').addClass('inactive');
         }
-        $("table").addClass(["table", "table-dark", "table-striped", "table-bordered"]);
+        $("table").addClass(["table", "table-striped", "table-bordered"]);
 
         var arrOfPtags = document.getElementsByTagName("p");
         for (var i = 0;i < arrOfPtags.length; i++){
