--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
                     {{- partial "components/sidebar-account" . -}}
             </div>
             <div class="col-sm-12 col-md-9 col-lg-9 account-content" id="account-content">
-                <h2>{{- .Params.Title -}}</h2>
+                <h2>{{- .Params.Title | markdownify -}}</h2>
                 {{- if not (in .Params.Permalink "all-articles") -}}
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6">
