--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,6 +21,7 @@
 {{- end -}}
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/algolia-min.css" integrity="sha256-HB49n/BZjuqiCtQQf49OdZn63XuKFaxcIHWf0HNKte8=" crossorigin="anonymous">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 {{ $style := resources.Get "styles.scss" | toCSS | minify | fingerprint }}
@@ -93,6 +94,3 @@
   try{(new g(100,"r","QSI_S_ZN_7WEcCqVEECKBeIt","https://zn7weccqveeckbeit-rackspaceinc.siteintercept.qualtrics.com/SIE/?Q_ZID=ZN_7WEcCqVEECKBeIt")).start()}catch(i){}})();
 </script><div id='ZN_7WEcCqVEECKBeIt'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
 <!--END WEBSITE FEEDBACK SNIPPET-->
-
-{{ $built := resources.Get "js/main.js" }}
-<script type="module" src="{{ $built.RelPermalink }}" defer></script>
