--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -78,6 +78,19 @@
             }
         }
     }
+    // var request = new XMLHttpRequest();
+    // request.open("GET", "../../algolia.json", false);
+    // request.send(null)
+    // var objects = JSON.parse(request.responseText);
+    // const client = algoliasearch('KL3UEHFLE7', 'e6a02f4332ef885b9ef561760928ef92');
+    // const index = client.initIndex('support');
+    // console.log(index);
+    // console.log(objects);
+    // index.saveObjects(objects).then(({
+    //     objectIDs
+    // }) => {
+    //     console.log(objectIDs);
+    // });
     const search = instantsearch({
         indexName: 'support',
         searchClient: algoliasearch('KL3UEHFLE7', 'e6a02f4332ef885b9ef561760928ef92'),
@@ -87,7 +100,7 @@
             hitsContainer.style.display = helper.state.query === '' ? 'none' : '';
             paginationContainer.style.display = helper.state.query === '' ? 'none' : '';
             helper.search();
-        }
+        },
     });
 
     search.addWidgets([
@@ -99,11 +112,16 @@
             searchAsYouType: true,
         }),
         instantsearch.widgets.hits({
-            container: '#hits',
+                container: '#hits',
+                templates: {
+                    item(item) {
+                        return `{{- partial "instantsearch/hits" -}}`;
+                },
+            },
         }),
-        instantsearch.widgets.pagination({
-            container: '#pagination',
-        }),
+    instantsearch.widgets.pagination({
+        container: '#pagination',
+    }),
     ]);
 
     search.start();
