--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,6 @@
 {{- define "main" -}}
 <main id="post-container" class="how-to-wrapper">
-    <div id="hits"></div>
-    <div id="pagination"></div>
+    {{- partial "components/search-modal" . -}}
     {{- partial "components/announcement" . -}}
     {{- if or (eq .Params.Type "product") (eq .Params.Type "article") -}}
     <div class="container">
