--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -84,5 +84,4 @@
     src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CObject.assign%2CObject.entries">
 </script>
 
-{{ $built := resources.Get "js/scripts.js" | js.Build }}
-<script type="text/javascript" src="{{ $built.RelPermalink }}" defer></script>
+<script src="/assets/bundle.js"></script>
