--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -77,6 +77,9 @@
                 arrOfPtags[i].className += "callout-tip";
             }
         }
+        $('#searchModal').on("shown.bs.modal", function() {
+            $('.ais-SearchBox-input').focus();
+        })
     }
 </script>
 
