--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,7 @@
 {{- define "main" -}}
 <main id="post-container" class="how-to-wrapper">
     {{- partial "components/announcement" . -}}
+    {{- partial "components/banner" . -}}
     {{- if or (eq .Params.Type "product") (eq .Params.Type "article") -}}
     <div class="container">
         <div class="row">
