--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{- define "main" -}}
 <main class="how-to-wrapper">
     {{- partial "components/announcement" . -}}
+    {{- partial "components/banner" . -}}
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-2 col-lg-2">
