--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -103,4 +103,4 @@
     src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CObject.assign%2CObject.entries">
 </script>
 
-<script src="https://support-site-search.netlify.app/assets/bundle.js"></script>
+<script src="https://docs-support-how-to.netlify.app/assets/bundle.js"></script>
